Fix _menubutton and remove photo on mobile

--- a/src/styles/_menubutton.scss
+++ b/src/styles/_menubutton.scss
@@ -4,19 +4,20 @@
   display: none;
   position: absolute;
   //   right: calc(50vw - 3rem);
-  right: 0;
-  top: 40vh;
+  right: 1rem;
+  top: 1rem;
+  // top: 40vh;
   //   height: 8rem;
   //   background: red;
-  color: $darkmode-text-second;
-  border-radius: 2rem 0 0 2rem;
+  // color: $darkmode-text-second;
+  // border-radius: 2rem 0 0 2rem;
   //   padding: 0.5rem;
   //   margin: 1rem;
   //   border: 0.5rem solid $darkmode-text-second;
   z-index: 9;
-  background-color: $darkmode-background-second-08opacity;
-  padding: 0.5rem 0 0.5rem 0.5rem;
-  box-shadow: $boxshadow;
+  // background-color: $darkmode-background-second-08opacity;
+  // padding: 0.5rem 0 0.5rem 0.5rem;
+  // box-shadow: $boxshadow;
   transition: $transition-all-ease;
 
   //   span {
@@ -27,8 +28,8 @@
 
 #menu-button {
   display: none;
-  font-size: 6rem;
-  border-radius: 2rem 0 0 2rem;
+  font-size: 4rem;
+  // border-radius: 2rem 0 0 2rem;
 
   //   background: $darkmode-text-second;
   //   border-radius: 50%;
